--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-move": "^2.7.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-keychain": "^6.1.1",
-    "react-native-touch-id": "^4.4.1",
+    "react-native-touch-id": "git+https://git@github.com/trustee-wallet/react-native-touch-id",
     "react-native-vector-icons": "^7.0.0"
   },
   "peerDependencies": {
